# com.librehat.yahooweather

./: .gitignore  .plasmateprojectrc  CMakeLists.txt  README.md  metadata.desktop  mkplasmoid.sh
translations/: CMakeLists.txt  Messages.sh  README.md  bg.po  com.librehat.yahooweather.pot  de.po  extract-and-merge-messages.sh  fr.po  hu.po  it.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sr.po  zh_CN.po  zh_TW.po
translations/bg/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/de/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/fr/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/hu/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/it/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/nl/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/pl/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/pt_BR/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/ro/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/ru/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/sr/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/sr@ijekavian/LC_MESSAGES/: com.librehat.yahooweather.mo  com.librehat.yahooweather.po
translations/sr@ijekavianlatin/LC_MESSAGES/: com.librehat.yahooweather.mo  (+1 more)
(+67 files in other folders)
